--- a/style.css
+++ b/style.css
@@ -115,11 +115,11 @@ nav {
       display: none;
       width: 100%;
       position: absolute;
-      top: 60px;
+      top: 80px;
       left: 0;
       background: #0066cc;
       flex-direction: column;
-      text-align: center;
+      text-align: left;
    }
 
    #navLinks.active {
